2024-01-26  Niels Möller  <nisse@lysator.liu.se>

	Delete all sparc32 assembly.
	* sparc32/aes-decrypt-internal.asm: Deleted file.
	* sparc32/aes-encrypt-internal.asm: Deleted file.
	* configure.ac: Don't enable any assembly for 32-bit sparc.
	* Makefile.in (distdir): Don't distribute sparc32 files.
	* sparc64/aes.m4: Moved file, from...
	* sparc32/aes.m4: ... old location.
	* sparc64/aes-encrypt-internal.asm: Update for location of aes.m4.
	* sparc64/aes-decrypt-internal.asm: Likewise.

2024-01-23  Niels Möller  <nisse@lysator.liu.se>

	* powerpc64/machine.m4 (GHASH_REDUCE): New macro. Improve
	scheduling, adding vpmsumd result last.
	* powerpc64/p8/ghash-update.asm: Use GHASH_REDUCE, slightly reduce
	vector register usage, simplify use of index registers.

2024-01-21  Niels Möller  <nisse@lysator.liu.se>

	* powerpc64/machine.m4 (OPN_XXY, OPN_XXXY): New macros.
	* powerpc64/p8/aes-encrypt-internal.asm: Use macros for repeated
	instruction patterns.
	* powerpc64/p8/aes-decrypt-internal.asm: Likewise.

2023-12-27  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/gcm-test.c (test_main): Additional gcm test case, with
	719 byte message, contributed by Danny Tsen.

2023-12-08  Niels Möller  <nisse@lysator.liu.se>

	Delete all md5 assembly code.
	* md5.c (nettle_md5_compress): Move function and related macros
	here, from...
	* md5-compress.c: ... deleted file.
	* x86/md5-compress.asm: Deleted file.
	* x86_64/md5-compress.asm: Deleted file.

	* configure.ac: When checking for openssl, use AC_LINK_IFELSE to
	check if needed functions really are available. Just using
	AC_CHECK_LIB to check for, e.g., EVP_RSA_gen, doesn't work, since
	that is a macro that depends on including openssl/rsa.h.'

2023-12-06  Niels Möller  <nisse@lysator.liu.se>

	* drbg-ctr-aes256.c (drbg_ctr_aes256_output): New helper function.
	(drbg_ctr_aes256_update, drbg_ctr_aes256_random): Use it.

	From Simon Josefsson:
	* drbg-ctr.h (struct drbg_ctr_aes256_ctx): New context struct.